tests/chapter_17/valid/sizeof/sizeof_array_type.c
int main(void) {
  // get size of array type
  // size here is 3 * 2 * 8 = 48 bytes
  return sizeof(double[3][2]);
}