tests/chapter_17/invalid_types/incomplete_types/void_array_nested_in_declaration.c
extern void (*ptr)[3][4];  // array of void is illegal (including nested array)

void *foo(void) {
    return ptr;
}